--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,9 @@ a {
 			rgba(255, 0, 0, 1) 35%
 		);
 	}
+	.banner-title {
+		font-size: 8vw;
+	}
 	.map {
 		width: 100%;
 	}
@@ -53,6 +56,9 @@ a {
 		left: 0px;
 		height: 0px;
 		margin: 0px;
+	}
+	.banner-title {
+		font-size: 7vw;
 	}
 	.yarr {
 		display: block;
@@ -77,6 +83,9 @@ a {
 	}
 }
 @media only screen and (min-width: 768px) {
+	.banner-title {
+		font-size: 5vw;
+	}
 	.fcontent {
 		grid-template-columns: auto auto;
 	}
@@ -140,6 +149,9 @@ a {
 	}
 	.yarr {
 		display: flex;
+	}
+	.banner-title {
+		font-size: 5vw;
 	}
 	.resizable {
 		width: 80%;
@@ -405,4 +417,62 @@ a {
 }
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
 	border: none !important;
+}
+.banner {
+	width: 100vw;
+	height: 70vh;
+
+	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+		url(../public/MUMBAI.jpg);
+	/* height: 50%; */
+
+	/* Position and center the image to scale nicely on all screens */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+}
+.banner-title {
+	color: white;
+}
+.banner-text {
+	text-align: center;
+	position: absolute;
+	top: 15%;
+	text-align: left;
+	line-height: 1;
+	font-weight: 600;
+	left: 10%;
+	color: white;
+	transition: 0.5s;
+	transition-timing-function: ease-in-out;
+	animation: 1s ease-out 0s 1 slideInFromLeft;
+}
+.banner-text-c {
+	width: 45vw;
+}
+@keyframes slideInFromLeft {
+	0% {
+		transform: translateX(-100px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+.banbutton {
+	width: 150px;
+	height: 7vh;
+	border: none;
+	color: black;
+	font-weight: 600;
+	font-size: 20px;
+	background-color: #f5f5f5;
+	transition: 0.5s;
+}
+.banbutton:hover {
+	background-color: black;
+	color: white;
 }
