--- a/styles/globals.css
+++ b/styles/globals.css
@@ -478,6 +478,23 @@ a {
 }
 .scrollview {
 	display: flex;
-	overflow: scroll;
+	overflow-y: scroll;
+	flex-direction: row;
 	width: 100vw;
+	align-items: center;
+	justify-content: center;
+}
+.contentstyle {
+	height: 200px;
+	min-width: 200px !important;
+	box-shadow: 0 1px 1px rgb(0 0 0 / 8%), 0 2px 2px rgb(0 0 0 / 12%),
+		0 4px 4px rgb(0 0 0 / 16%), 0 8px 8px rgb(0 0 0 / 20%);
+	background: white;
+	margin: 10px;
+	border-radius: 16px;
+	padding: 20px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
 }
