--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,12 +31,6 @@ a {
 		left: 0px;
 		height: 0px;
 		margin: 0px;
-		background: rgb(246, 188, 26);
-		background: linear-gradient(
-			149deg,
-			rgba(246, 188, 26, 1) 0%,
-			rgba(255, 0, 0, 1) 35%
-		);
 	}
 	.banner-title {
 		font-size: 8vw;
@@ -83,6 +77,10 @@ a {
 	}
 }
 @media only screen and (min-width: 768px) {
+	.scrollview {
+		align-items: center;
+		justify-content: center;
+	}
 	.banner-title {
 		font-size: 5vw;
 	}
@@ -114,6 +112,10 @@ a {
 	}
 }
 @media only screen and (min-width: 992px) {
+	.scrollview {
+		align-items: center;
+		justify-content: center;
+	}
 	.fcontent {
 		grid-template-columns: auto auto auto;
 	}
@@ -144,6 +146,10 @@ a {
 	}
 }
 @media only screen and (min-width: 1200px) {
+	.scrollview {
+		align-items: center;
+		justify-content: center;
+	}
 	.fcontent {
 		grid-template-columns: auto auto auto auto;
 	}
@@ -178,7 +184,10 @@ a {
 }
 #mainbar {
 	justify-content: space-between;
-	height: 60px;
+	backdrop-filter: blur(8px); /* Chrome and Opera */
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.08);
+	height: 90px;
 	display: flex;
 	transition: 0.5s;
 }
@@ -196,30 +205,41 @@ a {
 
 .list {
 	list-style-type: none;
+	size: 20px !important;
 }
-
+.list .svg {
+	margin-top: 20px;
+	width: 40px;
+	height: 40px;
+}
 .switchsvg {
 	transition: 0.5s;
 	background: none;
 	border: none;
 }
 .exitbar {
-	width: 30px;
-	height: 30px;
+	background: black;
+	color: white;
+	width: 40px;
+	height: 40px;
+	font-weight: 600;
+	font-size: 22px;
 	position: absolute;
-	top: 30px;
+	bottom: 40px;
 	right: 30px;
 }
 .navbarlist {
 	list-style-type: none;
+	-webkit-backdrop-filter: blur(8px); /* Safari 9+ */
+	backdrop-filter: blur(8px); /* Chrome and Opera */
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.08);
 	transition: 0.5s;
 	overflow: hidden;
-	opacity: 1;
 	z-index: 9999;
 }
 .buttonsbar00 {
 	display: flex;
-	opacity: 1;
 	justify-content: flex-end;
 	transition: 0.5s;
 }
@@ -333,7 +353,7 @@ a {
 	right: 2%;
 	height: 50px;
 	width: 50px;
-	border-radius: 50%;
+	border-radius: 30%;
 	background-color: #002147;
 	box-shadow: 16px 12px 38px -15px #1a194d;
 	/* 
@@ -477,12 +497,13 @@ a {
 	color: white;
 }
 .scrollview {
-	display: flex;
-	overflow-y: scroll;
 	flex-direction: row;
-	width: 100vw;
-	align-items: center;
-	justify-content: center;
+	/* width: 100vw; */
+
+	display: flex;
+	overflow-x: scroll;
+	/* vertical-line:middle; */
+	min-width: 100%;
 }
 .contentstyle {
 	height: 200px;
@@ -495,6 +516,19 @@ a {
 	padding: 20px;
 	align-items: center;
 	justify-content: center;
+	display: flex;
+	flex-direction: column;
+}
+.property {
+	height: 200px;
+	min-width: 200px !important;
+	box-shadow: 0 1px 1px rgb(0 0 0 / 8%), 0 2px 2px rgb(0 0 0 / 12%),
+		0 4px 4px rgb(0 0 0 / 16%), 0 8px 8px rgb(0 0 0 / 20%);
+	background: white;
+	margin: 10px;
+	border-radius: 16px;
+	padding: 20px;
+	justify-content: left;
 	display: flex;
 	flex-direction: column;
 }
