--- a/styles/globals.css
+++ b/styles/globals.css
@@ -230,10 +230,7 @@ a {
 }
 .navbarlist {
 	list-style-type: none;
-	-webkit-backdrop-filter: blur(8px); /* Safari 9+ */
-	backdrop-filter: blur(8px); /* Chrome and Opera */
-	background-color: rgba(255, 255, 255, 0.3);
-	box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.08);
+
 	transition: 0.5s;
 	overflow: hidden;
 	z-index: 9999;
@@ -340,13 +337,6 @@ a {
 .heading:hover span {
 	transform: translate3d(-150%, 0, 0);
 }
-
-#banner {
-	height: 600px;
-	border-bottom-left-radius: 32px;
-	border-bottom-right-radius: 32px;
-	overflow: hidden;
-}
 .navbarbutton {
 	position: fixed;
 	bottom: 2%;
@@ -440,22 +430,21 @@ a {
 }
 .banner {
 	width: 100vw;
-	height: 70vh;
-
-	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
-		url(../public/MUMBAI.jpg);
+	height: 100vh;
 	/* height: 50%; */
-
 	/* Position and center the image to scale nicely on all screens */
-	background-position: center;
+
+}
+.banner-title {
+	color: black;
+}
+.banner-text {
+	/* background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
-}
-.banner-title {
-	color: white;
-}
-.banner-text {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+	url(../public/MUMBAI.jpg); */
 	text-align: center;
 	position: absolute;
 	top: 15%;
@@ -463,7 +452,7 @@ a {
 	line-height: 1;
 	font-weight: 600;
 	left: 10%;
-	color: white;
+	color: black;
 	transition: 0.5s;
 	transition-timing-function: ease-in-out;
 	animation: 1s ease-out 0s 1 slideInFromLeft;
@@ -497,27 +486,31 @@ a {
 	color: white;
 }
 .scrollview {
-	flex-direction: row;
-	/* width: 100vw; */
-
-	display: flex;
-	overflow-x: scroll;
-	/* vertical-line:middle; */
+	display: grid;
+	grid-template-columns: auto auto auto;
 	min-width: 100%;
 }
 .contentstyle {
 	height: 200px;
 	min-width: 200px !important;
-	box-shadow: 0 1px 1px rgb(0 0 0 / 8%), 0 2px 2px rgb(0 0 0 / 12%),
-		0 4px 4px rgb(0 0 0 / 16%), 0 8px 8px rgb(0 0 0 / 20%);
-	background: white;
 	margin: 10px;
-	border-radius: 16px;
+	border-radius: 12px;
 	padding: 20px;
 	align-items: center;
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
+	background-color: rgba(255, 255, 255, 0.3);
+    /* box-shadow: inset 0 0 0 200px rgb(255 255 255 / 8%); */
+    backdrop-filter: blur(8px);
+
+	transition :0.1s;
+}
+.contentstyle:hover{
+	box-shadow: 0 1px 1px rgb(0 0 0 / 8%), 0 2px 2px rgb(0 0 0 / 12%),
+	0 4px 4px rgb(0 0 0 / 16%), 0 8px 8px rgb(0 0 0 / 20%);
+/* background: white; */ 
+border:2px solid black;
 }
 .property {
 	height: 200px;
@@ -532,3 +525,13 @@ a {
 	display: flex;
 	flex-direction: column;
 }
+.scene{
+    width:100vw;
+    height:100vh;
+}
+
+.canvas{
+    background: #000;
+}
+
+
