--- a/styles/globals.css
+++ b/styles/globals.css
@@ -433,29 +433,28 @@ a {
 	height: 100vh;
 	/* height: 50%; */
 	/* Position and center the image to scale nicely on all screens */
-
-}
-.banner-title {
-	color: black;
-}
-.banner-text {
-	/* background-position: center;
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
-	url(../public/MUMBAI.jpg); */
+	url(../public/MUMBAI.jpg); 
+
+}
+.banner-title {
+	color: white;
+}
+.banner-text {
+	padding:10% 10% 0% 10% ;
 	text-align: center;
-	position: absolute;
-	top: 15%;
 	text-align: left;
 	line-height: 1;
 	font-weight: 600;
-	left: 10%;
-	color: black;
+	color: #fbfaf5;
 	transition: 0.5s;
 	transition-timing-function: ease-in-out;
 	animation: 1s ease-out 0s 1 slideInFromLeft;
+	/* width:100vw; */
 }
 .banner-text-c {
 	width: 45vw;
